appId: io.customer.testbed.flutter.spm
name: Flutter UIScene push routing, open
---
- pressKey: Home
- extendedWaitUntil:
    visible:
      id: "NotificationShortLookView"
    timeout: 60000
- tapOn:
    id: "NotificationShortLookView"
    retryTapIfNoChange: false
- extendedWaitUntil:
    visible: "Device Token Input"
    timeout: 15000
